--- a/css/styles.css
+++ b/css/styles.css
@@ -665,6 +665,10 @@ body {
     width: 528px;
     height: 581px;
     background-color: var(--primary-bg-color);
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 
+                0px 1px 1px rgb(0 0 0 / 14%), 
+                0px 2px 1px rgb(0 0 0 / 20%);
+    border-radius: 4px;
 }
 
 .modal-close-btn {
@@ -681,6 +685,168 @@ body {
     border-radius: 50%;
     padding: 0;
     cursor: pointer;
+}
+
+.modal-close-btn:hover {
+    fill: var(--primary-accent-color);
+}
+
+.modal-form {
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+}
+
+.modal-form-title {
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--primary-text-color);
+}
+
+.modal-form-field {
+    margin-bottom: 20px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--primary-contact-color);
+}
+
+.form-field-wrapper {
+    position: relative;
+    display: block;
+    margin-top: 4px;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    font: inherit;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color var(--transition-dur-and-func);
+}
+
+.modal-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    margin-left: 12px;
+    transition: fill var(--transition-dur-and-func);
+}
+
+.modal-form-textarea {
+    display: block;
+    width: 100%;
+    height: 120px;
+    margin-top: 4px;
+    padding: 12px 16px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color var(--transition-dur-and-func);
+}
+
+.modal-form-textarea::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-textarea:focus {
+    border-color: var(--primary-accent-color);
+    outline: none;
+}
+
+.modal-form-input:focus {
+    border-color: var(--primary-accent-color);
+    outline: none;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+    fill: var(--primary-accent-color);
+}
+
+.modal-form-check-own {
+    width: 16px;
+    height: 15px;
+    margin-right: 8px;
+    border: 2px solid var(--primary-text-color);
+    fill: var(--primary-bg-color);
+    border-radius: 2px;
+    transition: fill var(--transition-dur-and-func);
+}
+
+.modal-form-check:checked + .modal-form-check-own {
+    background-color: var(--primary-accent-color);
+    border-color: var(--primary-accent-color);
+}
+
+.modal-form-check:checked + .modal-form-check-own .modal-form-check-icon {
+    display: block;
+}
+
+.modal-form-check-icon {
+    display: none;
+}
+
+.modal-form-check:focus +.modal-form-check-own {
+    box-shadow: 0 0 0 2px rgba(0,0,255,0.7);
+}
+
+.modal-form-check-field {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    color: var(--primary-contact-color);
+}
+
+.form-policy-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--primary-accent-color);
+}
+
+.modal-form-submit {
+    width: 200px;
+    height: 50px;
+    margin-right: auto;
+    margin-left: auto;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--primary-bg-color);
+    background-color: var(--primary-accent-color);
+    border: 1px solid transparent;
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.15);
+    border-radius: 4px;
+    transition: background-color var(--transition-dur-and-func);
+    cursor: pointer;
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+    background-color: #188CE8;
 }
 
 /*-------------- /MODAL --------------*/
