--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,75 @@ body {
     fill: var(--primary-bg-color);
 }
 
+.footer-form {
+    margin-left: auto;
+}
+
+.footer-form-text {
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-bg-color);
+}
+
+.footer-form-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-form-field {
+    margin-right: 12px;
+}
+
+.footer-form-input {
+    height: 50px;
+    width: 358px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 16px;
+    background-color: var(--dark-bg-color);
+    border: 1px solid rgba(255,255,255,0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.15));
+    border-radius: 4px;
+    color: var(--primary-bg-color);
+}
+
+.footer-form-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 200px;
+    height: 50px;
+    padding: 10px 28px;
+    color: var(--primary-bg-color);
+    fill: currentColor;
+    background: var(--primary-accent-color);
+    box-shadow: 0px 4px 4px rgba(0,0,0, 0.15);
+    border-radius: 4px;
+    border: 0px solid transparent;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    transition: background-color var(--transition-dur-and-func);
+    cursor: pointer;
+}
+
+.footer-form-button:hover,
+.footer-form-button:focus {
+    background-color: #188CE8;
+}
+
+.footer-form-icon {
+    margin-left: 10px;
+}
+
 /*-------------- /FOOTER --------------*/
 
 /*-------------- FEATURE --------------*/
